--- a/style.css
+++ b/style.css
@@ -1,7 +1,79 @@
 * {
     box-sizing: border-box;
+    margin: 0;
+    font-family: inherit;
 }
+
+:root {}
+
+button {
+    aspect-ratio: 1;
+    background-color: black;
+    background: linear-gradient(120deg, black 66%, #777);
+    border: 4px solid #444;
+    border-radius: 50%;
+    color: whitesmoke;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 1.25rem;
+    margin: 1rem 2rem;
+    padding: 1rem;
+    width: 100px;
+    text-align: center;
+}
+
+button:hover {
+    filter: contrast(0.75);
+}
+
+button:active {
+    filter: contrast(0.5)
+}
+
+h1 {
+    font-size: 2rem;
+    font-weight: bold;
+    text-align: center;
+    margin: 1em;
+}
+
+h2 {
+    font-size: 2rem;
+    font-weight: bold;
+    text-align: center;
+    height: 2rem;
+    margin: 1rem;
+}
+
+img {
+    height: 20vh;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 2%;
+    height: 100vh;
+}
+
+/*====================================================================================================
+Additional Layouts
+====================================================================================================*/
 
 .hidden {
     display: none;
+}
+
+.dealer,
+.player {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+nav {
+    display: flex;
+    justify-content: center;
 }
