--- a/style.css
+++ b/style.css
@@ -7,18 +7,19 @@
 :root {}
 
 button {
-    aspect-ratio: 1;
+    /* aspect-ratio: 1; */
     background-color: black;
-    background: linear-gradient(120deg, black 66%, #777);
-    border: 4px solid #444;
-    border-radius: 50%;
+    /* background: linear-gradient(120deg, black 66%, #777); */
+    /* border: 4px solid #444; */
+    border: none;
+    border-radius: 0.5rem;
     color: whitesmoke;
     cursor: pointer;
     font-weight: bold;
     font-size: 1.25rem;
     margin: 1rem 2rem;
     padding: 1rem;
-    width: 100px;
+    /* width: 100px; */
     text-align: center;
 }
 
