--- a/style.css
+++ b/style.css
@@ -4,27 +4,27 @@
     font-family: inherit;
 }
 
-:root {}
+:root {
+    font-family: Arial, Helvetica, sans-serif;
+}
 
 button {
-    /* aspect-ratio: 1; */
     background-color: black;
-    /* background: linear-gradient(120deg, black 66%, #777); */
-    /* border: 4px solid #444; */
     border: none;
-    border-radius: 0.5rem;
+    border-radius: 2rem;
     color: whitesmoke;
     cursor: pointer;
     font-weight: bold;
     font-size: 1.25rem;
     margin: 1rem 2rem;
     padding: 1rem;
-    /* width: 100px; */
     text-align: center;
+    text-transform: uppercase;
+    min-width: 5rem;
 }
 
 button:hover {
-    filter: contrast(0.75);
+    filter: contrast(0.7);
 }
 
 button:active {
@@ -35,46 +35,127 @@ h1 {
     font-size: 2rem;
     font-weight: bold;
     text-align: center;
-    margin: 1em;
+    margin: 1rem;
 }
 
 h2 {
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-weight: bold;
     text-align: center;
-    height: 2rem;
-    margin: 1rem;
+    margin: 0.5rem;
+}
+
+span {
+    font-size: 1.5rem;
+    font-weight: bold;
 }
 
 img {
     height: 20vh;
 }
 
-main {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 2%;
-    height: 100vh;
+input[type="number"] {
+    align-self: center;
+    line-height: 2rem;
+    height: 2rem;
 }
 
 /*====================================================================================================
-Additional Layouts
+Classes
 ====================================================================================================*/
 
 .hidden {
-    display: none;
+    display: none !important;
 }
 
-.dealer,
-.player {
+.container {
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-nav {
+.container.vertical {
+    flex-direction: column;
+}
+
+.container.wrap {
+    flex-wrap: wrap;
+}
+
+button.chip {
+    aspect-ratio: 1;
+    /* background-color: whitesmoke; */
+    border: 6px dashed whitesmoke;
+    border-radius: 50%;
+    color: whitesmoke;
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin: 0.5rem;
+    padding: 0;
+    width: 15%;
+    filter: drop-shadow(4px 8px grey);
+}
+
+button.chip:hover {
+    filter: drop-shadow(4px 8px grey) contrast(0.7);
+}
+
+button.chip:active {
+    filter: drop-shadow(4px 8px grey) contrast(0.5);
+}
+
+button#bet1.chip {
+    background-color: skyblue;
+}
+
+button#bet5.chip {
+    background-color: red;
+}
+
+button#bet25.chip {
+    background-color: green;
+}
+
+button#bet50.chip {
+    background-color: blue;
+}
+
+button#bet100.chip {
+    background-color: black;
+}
+
+button#bet500.chip {
+    background-color: purple;
+}
+
+button#bet1000.chip {
+    background-color: gold;
+}
+
+/*====================================================================================================
+Layouts
+====================================================================================================*/
+main {
+    padding: 1rem;
+    height: 100vh;
+}
+
+section {
+    height: 100%;
+}
+
+nav.container {
+    position: absolute;
+    left: 1rem;
+    top: 1rem;
+    right: 1rem;
+    justify-content: space-between;
+}
+
+#dealer,
+#player {
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
